--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css">
-        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/leaflet-measure.css">
-        <style>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="css/leaflet.css">
+    <link rel="stylesheet" href="css/qgis2web.css">
+    <link rel="stylesheet" href="css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="css/leaflet-measure.css">
+    <style>
         html, body, #map {
             width: 100%;
             height: 100%;
@@ -20,47 +21,51 @@
         .leaflet-popup-content > table img {
             width: 250px;
         }
-
-        </style>
-        <title>Titik Kunjungan Relawan</title>
-    </head>
-    <body>
-        <div id="map">
-        </div>
-        <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script>
-        <script src="js/multi-style-layer.js"></script>
-        <script src="js/leaflet.rotatedMarker.js"></script>
-        <script src="js/leaflet.pattern.js"></script>
-        <script src="js/leaflet-hash.js"></script>
-        <script src="js/Autolinker.min.js"></script>
-        <script src="js/rbush.min.js"></script>
-        <script src="js/labelgun.min.js"></script>
-        <script src="js/labels.js"></script>
-        <script src="js/leaflet-measure.js"></script>
-        <script src="data/data_kunjungan.js"></script>
-        <script>
+    </style>
+    <title>Titik Kunjungan Relawan</title>
+</head>
+<body>
+    <div id="map"></div>
+    <script src="js/qgis2web_expressions.js"></script>
+    <script src="js/leaflet.js"></script>
+    <script src="js/multi-style-layer.js"></script>
+    <script src="js/leaflet.rotatedMarker.js"></script>
+    <script src="js/leaflet.pattern.js"></script>
+    <script src="js/leaflet-hash.js"></script>
+    <script src="js/Autolinker.min.js"></script>
+    <script src="js/rbush.min.js"></script>
+    <script src="js/labelgun.min.js"></script>
+    <script src="js/labels.js"></script>
+    <script src="js/leaflet-measure.js"></script>
+    <script src="data/data_kunjungan.js"></script>
+    <script>
         var highlightLayer;
+
         function highlightFeature(e) {
             highlightLayer = e.target;
 
             if (e.target.feature.geometry.type === 'LineString') {
-              highlightLayer.setStyle({
-                color: '#161A30',
-              });
+                highlightLayer.setStyle({
+                    color: '#161A30',
+                });
             } else {
-              highlightLayer.setStyle({
-                fillColor: '#161A30',
-                fillOpacity: 1
-              });
+                highlightLayer.setStyle({
+                    fillColor: '#161A30',
+                    fillOpacity: 1
+                });
             }
         }
+
         var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:1
-        })
+            zoomControl: true,
+            maxZoom: 28,
+            minZoom: 1
+        });
+
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
-        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
+        var autolinker = new Autolinker({ truncate: { length: 30, location: 'smart' } });
+
         var measureControl = new L.Control.Measure({
             position: 'topleft',
             primaryLengthUnit: 'meters',
@@ -69,16 +74,17 @@
             secondaryAreaUnit: 'hectares'
         });
         measureControl.addTo(map);
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .innerHTML = '';
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .className += ' fas fa-ruler';
+        document.getElementsByClassName('leaflet-control-measure-toggle')[0].innerHTML = '';
+        document.getElementsByClassName('leaflet-control-measure-toggle')[0].className += ' fas fa-ruler';
+
         var bounds_group = new L.featureGroup([]);
+
         function setBounds() {
             if (bounds_group.getLayers().length) {
                 map.fitBounds(bounds_group.getBounds());
             }
         }
+
         map.createPane('pane_OpenStreetMap_0');
         map.getPane('pane_OpenStreetMap_0').style.zIndex = 400;
         var layer_OpenStreetMap_0 = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
@@ -90,41 +96,41 @@
             minNativeZoom: 0,
             maxNativeZoom: 19
         });
-        layer_OpenStreetMap_0;
         map.addLayer(layer_OpenStreetMap_0);
-        
+
         function pop_data_kunjungan(feature, layer) {
             layer.on({
-                mouseout: function(e) {
-                    for (i in e.target._eventParents) {
+                mouseout: function (e) {
+                    for (var i in e.target._eventParents) {
                         e.target._eventParents[i].resetStyle(e.target);
                     }
                 },
                 mouseover: highlightFeature,
             });
-            var popupContent = '<table style="width: 100%; border-collapse: collapse;">\
-                <tr>\
-                    <th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Nama Relawan</th>\
-                    <td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Nama Relawan'] !== null ? autolinker.link(feature.properties['Nama Relawan'].toLocaleString()) : '') + '</td>\
-                </tr>\
-                <tr>\
-                    <th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Alamat tujuan</th>\
-                    <td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Alamat tujuan'] !== null ? autolinker.link(feature.properties['Alamat tujuan'].toLocaleString()) : '') + '</td>\
-                </tr>\
-                <tr>\
-                    <th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Nama yang dikunjungi</th>\
-                    <td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Nama yang dikunjungi'] !== null ? autolinker.link(feature.properties['Nama yang dikunjungi'].toLocaleString()) : '') + '</td>\
-                </tr>\
-                <tr>\
-                    <th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Keterangan kunjungan</th>\
-                    <td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Keterangan kunjungan'] !== null ? autolinker.link(feature.properties['Keterangan kunjungan'].toLocaleString()) : '') + '</td>\
-                </tr>\
-                <tr>\
-                    <th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Foto</th>\
-                    <td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Foto'] !== null ? '<img style="width: 200px" src="images/' + String(feature.properties['Foto']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>\
-                </tr>\
-            </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
+
+            var popupContent = '<table style="width: 100%; border-collapse: collapse;">' +
+                '<tr>' +
+                '<th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Nama Relawan</th>' +
+                '<td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Nama Relawan'] !== null ? autolinker.link(feature.properties['Nama Relawan'].toLocaleString()) : '') + '</td>' +
+                '</tr>' +
+                '<tr>' +
+                '<th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Alamat tujuan</th>' +
+                '<td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Alamat tujuan'] !== null ? autolinker.link(feature.properties['Alamat tujuan'].toLocaleString()) : '') + '</td>' +
+                '</tr>' +
+                '<tr>' +
+                '<th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Nama yang dikunjungi</th>' +
+                '<td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Nama yang dikunjungi'] !== null ? autolinker.link(feature.properties['Nama yang dikunjungi'].toLocaleString()) : '') + '</td>' +
+                '</tr>' +
+                '<tr>' +
+                '<th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Keterangan kunjungan</th>' +
+                '<td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Keterangan kunjungan'] !== null ? autolinker.link(feature.properties['Keterangan kunjungan'].toLocaleString()) : '') + '</td>' +
+                '</tr>' +
+                '<tr>' +
+                '<th scope="row" style="text-align: left; padding: 8px; border: 1px solid #ddd;">Foto</th>' +
+                '<td style="padding: 8px; border: 1px solid #ddd;">' + (feature.properties['Foto'] !== null ? '<img style="width: 200px" src="images/' + String(feature.properties['Foto']).replace(/[\\\/:]/g, '_').trim() + '">' : '') + '</td>' +
+                '</tr>' +
+                '</table>';
+            layer.bindPopup(popupContent, { maxHeight: 400 });
         }
 
         function style_data_kunjungan_0() {
@@ -143,6 +149,7 @@
                 interactive: true,
             }
         }
+
         function style_data_kunjungan_1() {
             return {
                 pane: 'pane_data_kunjungan',
@@ -159,9 +166,11 @@
                 interactive: true,
             }
         }
+
         map.createPane('pane_data_kunjungan');
         map.getPane('pane_data_kunjungan').style.zIndex = 402;
         map.getPane('pane_data_kunjungan').style['mix-blend-mode'] = 'normal';
+
         var layer_data_kunjungan = new L.geoJson.multiStyle(json_data_kunjungan, {
             attribution: '',
             interactive: true,
@@ -169,22 +178,26 @@
             layerName: 'layer_data_kunjungan',
             pane: 'pane_data_kunjungan',
             onEachFeature: pop_data_kunjungan,
-            pointToLayers: [function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_data_kunjungan_0(feature));
-            },function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_data_kunjungan_1(feature));
-            },
-        ]});
+            pointToLayers: [
+                function (feature, latlng) {
+                    var context = {
+                        feature: feature,
+                        variables: {}
+                    };
+                    return L.circleMarker(latlng, style_data_kunjungan_0(feature));
+                },
+                function (feature, latlng) {
+                    var context = {
+                        feature: feature,
+                        variables: {}
+                    };
+                    return L.circleMarker(latlng, style_data_kunjungan_1(feature));
+                },
+            ]
+        });
+
         bounds_group.addLayer(layer_data_kunjungan);
         map.addLayer(layer_data_kunjungan);
-        </script>
-    </body>
+    </script>
+</body>
 </html>
